--- a/estilo.css
+++ b/estilo.css
@@ -76,8 +76,9 @@ a {
 }
 
 .imgNoticia{
-    //width: 50%;
-    //height: 100%;
+    width: 100%;
+    height: 100%;
+    min-width: 0;
     margin : 1%;
     flex-basis: 50%;
     
