--- a/estilo.css
+++ b/estilo.css
@@ -19,10 +19,6 @@ body {
     padding: 2%;
 }
 
-a {
-    color: blue;
-    text-decoration: unset;
-}
 
 #navbar{
     display: flex;
@@ -34,6 +30,8 @@ a {
 #navbar a{
     display: block;
     padding: 20px;
+    color: blue;
+    text-decoration: unset;
     
 }
 
@@ -60,6 +58,11 @@ a {
      //flex-basis: 60%;
 }
 
+#noticias a{
+    color: black;
+    text-decoration: unset;
+}
+
 
 .noticiaDestaque{
     display: flex;
@@ -77,7 +80,7 @@ a {
 
 .imgNoticia{
     width: 100%;
-    height: 100%;
+    height: auto;
     min-width: 0;
     margin : 1%;
     flex-basis: 50%;
@@ -95,6 +98,18 @@ a {
     
 }
 
+.noticiaDestaque a{
+    display: flex;
+    width: 100%;
+    height: 100%;
+     
+}
+
+.noticiaDestaque a:hover{
+    
+    box-shadow: grey 5px 5px 25px;
+}
+
 #rodape{
     display: flex;
     justify-content: end;
@@ -109,4 +124,13 @@ a {
     margin-top: 10px;
     color: white;
     padding-bottom: 10px;
+    
+    
+}
+
+#redesSociais a:hover{
+    opacity:60%;
+    }
+.redesImg{
+    padding-left: 10px;
 }
