--- a/estilo.css
+++ b/estilo.css
@@ -51,7 +51,7 @@ body {
 
 #noticias{
      display: flex;
-     justify-content: space-between;
+     justify-content: space-around;
      flex-wrap: wrap;
      
      margin: 0 auto;
@@ -68,6 +68,7 @@ body {
     display: flex;
     justify-content: space-between;
     border: gray 1px solid;
+    border-radius: 25px;
     margin: 10px;
     box-shadow: grey 2px 2px 5px;
     width: 48%;
@@ -84,6 +85,7 @@ body {
     min-width: 0;
     margin : 1%;
     flex-basis: 50%;
+    border-radius: 25px;
     
 }
 
@@ -93,7 +95,7 @@ body {
 .noticiaTexto{
     //margin-left: 2%;
     margin-right: 2%;
-    text-align: justify;
+    text-align: :left;
     flex-basis: 46%;
     
 }
@@ -106,7 +108,7 @@ body {
 }
 
 .noticiaDestaque a:hover{
-    
+    border-radius: 25px;
     box-shadow: grey 5px 5px 25px;
 }
 
@@ -116,6 +118,7 @@ body {
     background-color: rgba(36, 113, 175, 0.76);
     margin-top: 10px;
     border: black 1px solid;
+    
     
 }
 
