--- a/estilo.css
+++ b/estilo.css
@@ -59,7 +59,7 @@ body {
 }
 
 #noticias a{
-    color: black;
+    color: rgba(128, 128, 128, 0.9);
     text-decoration: unset;
 }
 
@@ -67,7 +67,7 @@ body {
 .noticiaDestaque{
     display: flex;
     justify-content: space-between;
-    border: gray 1px solid;
+    border: white 1px solid;
     border-radius: 25px;
     margin: 10px;
     box-shadow: grey 2px 2px 5px;
@@ -87,6 +87,7 @@ body {
     flex-basis: 50%;
     border-radius: 25px;
     
+    
 }
 
 
@@ -97,7 +98,11 @@ body {
     margin-right: 2%;
     text-align: :left;
     flex-basis: 46%;
+    padding: 2%;
     
+}
+.noticiaTexto strong{
+    color: royalblue;
 }
 
 .noticiaDestaque a{
