--- a/estilo.css
+++ b/estilo.css
@@ -5,18 +5,21 @@ body {
 
 #cabecalho {
     background-color: rgba(0, 139, 232);
-    border-radius: 10px;
-    margin-bottom: 30px;
-    box-shadow: black 2px 2px 5px;
+    //border-radius: 10px;
+    margin-bottom: 3%;
+    padding: 1%;
+    //box-shadow: black 2px 2px 5px;
     text-align: center;
     color: white;
+    //width: 100%;
 }
 
 #conteudo{
     background-color: white;
     margin-left: 5%;
     margin-right: 5%;
-    padding: 2%;
+    padding-bottom: 2%;
+    border-radius: 10px;
 }
 
 
@@ -36,7 +39,9 @@ body {
 }
 
 #imLogo{
-    width: 100%;
+    width: 96%;
+    padding-left: 2%;
+    padding-right: 2%;
     
 }
 
@@ -47,15 +52,20 @@ body {
     box-shadow: black 2px 2px 5px;
     text-align: center;
     color: white;
+    margin-left: 2%;
+    margin-right: 2%;
+    
 }
 
 #noticias{
-     display: flex;
-     justify-content: space-around;
-     flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
      
-     margin: 0 auto;
-     //flex-basis: 60%;
+    margin: 0 auto;
+    
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 #noticias a{
