--- a/estilo.css
+++ b/estilo.css
@@ -3,16 +3,60 @@ body {
     font-family: sans-serif;
 }
 
-#cabecalho {
+
+
+nav{
     background-color: rgba(0, 139, 232);
-    //border-radius: 10px;
-    margin-bottom: 3%;
-    padding: 1%;
-    //box-shadow: black 2px 2px 5px;
-    text-align: center;
     color: white;
-    //width: 100%;
+    //height: 80px;
+    width: 100%;
 }
+label.mylogo{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+
+nav ul {
+    float: right;
+    margin-right: 20px;
+  }
+
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+  }
+
+nav ul li a{
+    display: block;
+    //padding-top: 20px;
+    color: white;
+    text-decoration: unset;
+    //margin-right: 90%;
+    padding: 5px 30px;
+    border-radius: 3px;
+    font-size: 30px;
+    text-transform: uppercase;
+    transform: scale(0.8);
+    transition: all 0.2s;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+nav ul li a:hover{
+    //background-color: red;
+    //font-size: 32px;
+    transform: scale(1);
+    //border: white 1px solid;
+    
+}
+
+
+
+
+
 
 #conteudo{
     background-color: white;
@@ -23,20 +67,9 @@ body {
 }
 
 
-#navbar{
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 30px;
+
     
 
-}
-#navbar a{
-    display: block;
-    padding: 20px;
-    color: blue;
-    text-decoration: unset;
-    
-}
 
 #imLogo{
     width: 96%;
