--- a/estilo.css
+++ b/estilo.css
@@ -18,6 +18,40 @@ label.mylogo{
     padding: 0 100px;
     font-weight: bold;
 }
+#logo{
+    position: relative;
+    //text-align: center;
+}
+
+#imLogo{
+    width: 100%;
+    height: 50%;
+    
+}
+
+.mylogo_over{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 35px;
+    line-height: 80px;
+    //padding: 0 100px;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.mylogo_over2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    line-height: 80px;
+    //padding: 0 100px;
+    //font-weight: bold;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 nav ul {
     float: right;
@@ -71,12 +105,7 @@ nav ul li a:hover{
     
 
 
-#imLogo{
-    width: 100%;
-    padding-left: 0%;
-    padding-right: 0%;
-    
-}
+
 
 #tituloDestaque{
     background-color: rgba(0, 139, 232);
