--- a/estilo.css
+++ b/estilo.css
@@ -8,7 +8,6 @@ body {
 nav{
     background-color: rgba(0, 139, 232);
     color: white;
-    //height: 80px;
     width: 100%;
 }
 label.mylogo{
@@ -19,54 +18,7 @@ label.mylogo{
     font-weight: bold;
 }
 
-.title{
-    padding-top: 150px;
-    /*padding-bottom: 100px;
-    padding-left: auto; */
-    height: 300px;
-    margin: auto;
-    background: linear-gradient(to top, rgb(25, 163, 255) 5%, transparent 100%), rgb(25, 163, 255) url("Imagens/logo.jpg") no-repeat center / cover;
-    text-align: center;
-}
 
-.title h1{
-    font-size: 90px;
-    padding-bottom: -50%;
-}
-
-.title p{
-    font-size: 35px;
-}
-
-#imLogo{
-    width: 100%;
-    height: 50%;
-    
-}
-
-.mylogo_over{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 90px;
-    line-height: 80px;
-    //padding: 0 100px;
-    font-weight: bold;
-    position: absolute;
-    top: 50%;
-    left: 27%;
-    transform: translate(0%, -50%);
-}
-
-.mylogo_over2{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
-    line-height: 80px;
-    //padding: 0 100px;
-    //font-weight: bold;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
 nav ul {
     float: right;
@@ -81,10 +33,8 @@ nav ul li {
 
 nav ul li a{
     display: block;
-    //padding-top: 20px;
     color: white;
-    text-decoration: unset;
-    //margin-right: 90%;
+    text-decoration: unset;    
     padding: 5px 30px;
     border-radius: 3px;
     font-size: 30px;
@@ -92,18 +42,36 @@ nav ul li a{
     transform: scale(0.8);
     transition: all 0.2s;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    
     
 }
 nav ul li a:hover{
-    //background-color: red;
-    //font-size: 32px;
-    transform: scale(1);
-    //border: white 1px solid;
+    background-color: rgba(0, 139, 232, .6);
+    color: rgba(255, 255, 255);
     
 }
 
 
+.title{
+    padding-top: 150px;
+    height: 300px;
+    margin: auto;
+    background: linear-gradient(to top, rgb(25, 163, 255) 5%, transparent 100%), rgb(25, 163, 255) url("Imagens/logo.jpg") no-repeat center / cover;
+    text-align: center;
+}
 
+.title h1{
+    margin: 1rem 0;
+    font-size: 90px;
+    
+}
+
+.title p{
+    font-size: 35px;
+    padding-top: .01%;
+    margin: auto
+}
 
 
 
@@ -112,6 +80,7 @@ nav ul li a:hover{
     margin-left: 5%;
     margin-right: 5%;
     padding-bottom: 2%;
+    margin-bottom: 4%;
     border-radius: 10px;
 }
 
@@ -160,9 +129,10 @@ nav ul li a:hover{
     box-shadow: grey 2px 2px 5px;
     width: 48%;
     height: 100%;
-    
+    flex: 1 1 0px;
     flex-basis: 48%;
     flex-wrap: wrap;
+    
     
 }
 
@@ -181,7 +151,6 @@ nav ul li a:hover{
 
 
 .noticiaTexto{
-    //margin-left: 2%;
     margin-right: 2%;
     text-align: :left;
     flex-basis: 46%;
@@ -205,11 +174,9 @@ nav ul li a:hover{
 }
 
 #rodape{
-    //display: flex;
-    //justify-content: end;
     background-color: rgba(36, 113, 175, 0.76);
     margin-top: 10px;
-    border: black 1px solid;
+    border-top: white 1px solid;
     
     
 }
@@ -218,19 +185,21 @@ nav ul li a:hover{
     margin-right: 50px;
     margin-top: 10px;
     color: white;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
     //float: right;
     
     
 }
 
 #redesSociais img{
-    //float: right;
+    
+    
 }
 
 #redesSociais a:hover{
     opacity:60%;
     }
 .redesImg{
-    padding-left: 10px;
+    margin-left: 10px;
+    float: right;
 }
