--- a/estilo.css
+++ b/estilo.css
@@ -57,7 +57,7 @@ nav ul li a:hover{
     padding-top: 150px;
     height: 300px;
     margin: auto;
-    background: linear-gradient(to top, rgb(25, 163, 255) 5%, transparent 100%), rgb(25, 163, 255) url("Imagens/logo.jpg") no-repeat center / cover;
+    background: linear-gradient(to top, rgb(25, 163, 255) 5%, transparent 100%), linear-gradient(to top, transparent, rgba(0,0,0,50%)), rgb(25, 163, 255) url("Imagens/logo.jpg") no-repeat center / cover;
     text-align: center;
 }
 
@@ -92,14 +92,14 @@ nav ul li a:hover{
 
 
 #tituloDestaque{
-    background-color: rgba(0, 139, 232);
-    border-radius: 10px;
-    margin-bottom: 30px;
-    box-shadow: black 2px 2px 5px;
+    //background-color: rgba(0, 139, 232);
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-bottom: rgba(0, 139, 232) 2px solid;
     text-align: center;
-    color: white;
-    margin-left: 2%;
-    margin-right: 2%;
+    font-size: 30px;
+    padding-bottom: 30px;
+    color: rgba(0, 139, 232);
     
 }
 
