--- a/estilo.css
+++ b/estilo.css
@@ -93,14 +93,19 @@ nav ul li a:hover{
 
 #tituloDestaque{
     //background-color: rgba(0, 139, 232);
-    margin-bottom: 10px;
-    margin-top: 10px;
+    //margin-bottom: 20px;
+    //margin-top: 20px;
+    margin: .3% 2.5%; 
+    
     border-bottom: rgba(0, 139, 232) 2px solid;
     text-align: center;
     font-size: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 35px;
     color: rgba(0, 139, 232);
     
+}
+#tituloDestaque h2{
+    margin: 0;
 }
 
 #noticias{
@@ -112,6 +117,7 @@ nav ul li a:hover{
     
     margin-left: 2%;
     margin-right: 2%;
+    margin-top: 40px;
 }
 
 #noticias a{
